--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "robingruenke.icecream",
     "title": "Icecream Theme",
-    "description": "Icecreamy colors",
+    "description": "Pistachio, Strawberry and Blueberry!",
     "homepage": "https://github.com/eimfach/brackets-theme-icecream",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "author": "Robin Gruenke",
     "license": "MIT",
     "theme": {
